--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
-    "com.unity.feature.2d": "2.0.0",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.textmeshpro": "3.0.8",
     "com.unity.toolchain.linux-x86_64": "2.0.6",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
